feat: 中文版提交

--- a/packages/@n8n/nodes-langchain/package.json
+++ b/packages/@n8n/nodes-langchain/package.json
@@ -44,77 +44,77 @@
       "dist/credentials/ZepApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/vendors/OpenAi/OpenAi.node.js",
-      "dist/nodes/agents/Agent/Agent.node.js",
-      "dist/nodes/agents/OpenAiAssistant/OpenAiAssistant.node.js",
-      "dist/nodes/chains/ChainSummarization/ChainSummarization.node.js",
-      "dist/nodes/chains/ChainLLM/ChainLlm.node.js",
-      "dist/nodes/chains/ChainRetrievalQA/ChainRetrievalQa.node.js",
-      "dist/nodes/code/Code.node.js",
-      "dist/nodes/document_loaders/DocumentDefaultDataLoader/DocumentDefaultDataLoader.node.js",
-      "dist/nodes/document_loaders/DocumentBinaryInputLoader/DocumentBinaryInputLoader.node.js",
-      "dist/nodes/document_loaders/DocumentGithubLoader/DocumentGithubLoader.node.js",
-      "dist/nodes/document_loaders/DocumentJSONInputLoader/DocumentJsonInputLoader.node.js",
-      "dist/nodes/embeddings/EmbeddingsCohere/EmbeddingsCohere.node.js",
-      "dist/nodes/embeddings/EmbeddingsAwsBedrock/EmbeddingsAwsBedrock.node.js",
-      "dist/nodes/embeddings/EmbeddingsAzureOpenAi/EmbeddingsAzureOpenAi.node.js",
-      "dist/nodes/embeddings/EmbeddingsGooglePalm/EmbeddingsGooglePalm.node.js",
-      "dist/nodes/embeddings/EmbeddingsGoogleGemini/EmbeddingsGoogleGemini.node.js",
-      "dist/nodes/embeddings/EmbeddingsHuggingFaceInference/EmbeddingsHuggingFaceInference.node.js",
-      "dist/nodes/embeddings/EmbeddingsMistralCloud/EmbeddingsMistralCloud.node.js",
-      "dist/nodes/embeddings/EmbeddingsOpenAI/EmbeddingsOpenAi.node.js",
-      "dist/nodes/embeddings/EmbeddingsOllama/EmbeddingsOllama.node.js",
-      "dist/nodes/llms/LMChatAnthropic/LmChatAnthropic.node.js",
-      "dist/nodes/llms/LmChatAzureOpenAi/LmChatAzureOpenAi.node.js",
-      "dist/nodes/llms/LmGooglePalm/LmGooglePalm.node.js",
-      "dist/nodes/llms/LmChatAwsBedrock/LmChatAwsBedrock.node.js",
-      "dist/nodes/llms/LmChatGooglePalm/LmChatGooglePalm.node.js",
-      "dist/nodes/llms/LmChatGoogleGemini/LmChatGoogleGemini.node.js",
-      "dist/nodes/llms/LmChatMistralCloud/LmChatMistralCloud.node.js",
-      "dist/nodes/llms/LMChatOllama/LmChatOllama.node.js",
-      "dist/nodes/llms/LMChatOpenAi/LmChatOpenAi.node.js",
-      "dist/nodes/llms/LMOpenAi/LmOpenAi.node.js",
-      "dist/nodes/llms/LMCohere/LmCohere.node.js",
-      "dist/nodes/llms/LMOllama/LmOllama.node.js",
-      "dist/nodes/llms/LMOpenHuggingFaceInference/LmOpenHuggingFaceInference.node.js",
-      "dist/nodes/memory/MemoryBufferWindow/MemoryBufferWindow.node.js",
-      "dist/nodes/memory/MemoryMotorhead/MemoryMotorhead.node.js",
-      "dist/nodes/memory/MemoryRedisChat/MemoryRedisChat.node.js",
-      "dist/nodes/memory/MemoryManager/MemoryManager.node.js",
-      "dist/nodes/memory/MemoryChatRetriever/MemoryChatRetriever.node.js",
-      "dist/nodes/memory/MemoryXata/MemoryXata.node.js",
-      "dist/nodes/memory/MemoryZep/MemoryZep.node.js",
-      "dist/nodes/output_parser/OutputParserAutofixing/OutputParserAutofixing.node.js",
-      "dist/nodes/output_parser/OutputParserItemList/OutputParserItemList.node.js",
-      "dist/nodes/output_parser/OutputParserStructured/OutputParserStructured.node.js",
-      "dist/nodes/retrievers/RetrieverContextualCompression/RetrieverContextualCompression.node.js",
-      "dist/nodes/retrievers/RetrieverVectorStore/RetrieverVectorStore.node.js",
-      "dist/nodes/retrievers/RetrieverMultiQuery/RetrieverMultiQuery.node.js",
-      "dist/nodes/retrievers/RetrieverWorkflow/RetrieverWorkflow.node.js",
-      "dist/nodes/text_splitters/TextSplitterCharacterTextSplitter/TextSplitterCharacterTextSplitter.node.js",
-      "dist/nodes/text_splitters/TextSplitterRecursiveCharacterTextSplitter/TextSplitterRecursiveCharacterTextSplitter.node.js",
-      "dist/nodes/text_splitters/TextSplitterTokenSplitter/TextSplitterTokenSplitter.node.js",
-      "dist/nodes/tools/ToolCalculator/ToolCalculator.node.js",
-      "dist/nodes/tools/ToolCode/ToolCode.node.js",
-      "dist/nodes/tools/ToolSerpApi/ToolSerpApi.node.js",
-      "dist/nodes/tools/ToolWikipedia/ToolWikipedia.node.js",
-      "dist/nodes/tools/ToolWolframAlpha/ToolWolframAlpha.node.js",
-      "dist/nodes/tools/ToolWorkflow/ToolWorkflow.node.js",
-      "dist/nodes/trigger/ManualChatTrigger/ManualChatTrigger.node.js",
-      "dist/nodes/trigger/ChatTrigger/ChatTrigger.node.js",
-      "dist/nodes/vector_store/VectorStoreInMemory/VectorStoreInMemory.node.js",
-      "dist/nodes/vector_store/VectorStoreInMemoryInsert/VectorStoreInMemoryInsert.node.js",
-      "dist/nodes/vector_store/VectorStoreInMemoryLoad/VectorStoreInMemoryLoad.node.js",
-      "dist/nodes/vector_store/VectorStorePinecone/VectorStorePinecone.node.js",
-      "dist/nodes/vector_store/VectorStorePineconeInsert/VectorStorePineconeInsert.node.js",
-      "dist/nodes/vector_store/VectorStorePineconeLoad/VectorStorePineconeLoad.node.js",
-      "dist/nodes/vector_store/VectorStoreQdrant/VectorStoreQdrant.node.js",
-      "dist/nodes/vector_store/VectorStoreSupabase/VectorStoreSupabase.node.js",
-      "dist/nodes/vector_store/VectorStoreSupabaseInsert/VectorStoreSupabaseInsert.node.js",
-      "dist/nodes/vector_store/VectorStoreSupabaseLoad/VectorStoreSupabaseLoad.node.js",
-      "dist/nodes/vector_store/VectorStoreZep/VectorStoreZep.node.js",
-      "dist/nodes/vector_store/VectorStoreZepInsert/VectorStoreZepInsert.node.js",
-      "dist/nodes/vector_store/VectorStoreZepLoad/VectorStoreZepLoad.node.js"
+      "dist/nodes_zh/vendors/OpenAi/OpenAi.node.js",
+      "dist/nodes_zh/agents/Agent/Agent.node.js",
+      "dist/nodes_zh/agents/OpenAiAssistant/OpenAiAssistant.node.js",
+      "dist/nodes_zh/chains/ChainSummarization/ChainSummarization.node.js",
+      "dist/nodes_zh/chains/ChainLLM/ChainLlm.node.js",
+      "dist/nodes_zh/chains/ChainRetrievalQA/ChainRetrievalQa.node.js",
+      "dist/nodes_zh/code/Code.node.js",
+      "dist/nodes_zh/document_loaders/DocumentDefaultDataLoader/DocumentDefaultDataLoader.node.js",
+      "dist/nodes_zh/document_loaders/DocumentBinaryInputLoader/DocumentBinaryInputLoader.node.js",
+      "dist/nodes_zh/document_loaders/DocumentGithubLoader/DocumentGithubLoader.node.js",
+      "dist/nodes_zh/document_loaders/DocumentJSONInputLoader/DocumentJsonInputLoader.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsCohere/EmbeddingsCohere.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsAwsBedrock/EmbeddingsAwsBedrock.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsAzureOpenAi/EmbeddingsAzureOpenAi.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsGooglePalm/EmbeddingsGooglePalm.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsGoogleGemini/EmbeddingsGoogleGemini.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsHuggingFaceInference/EmbeddingsHuggingFaceInference.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsMistralCloud/EmbeddingsMistralCloud.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsOpenAI/EmbeddingsOpenAi.node.js",
+      "dist/nodes_zh/embeddings/EmbeddingsOllama/EmbeddingsOllama.node.js",
+      "dist/nodes_zh/llms/LMChatAnthropic/LmChatAnthropic.node.js",
+      "dist/nodes_zh/llms/LmChatAzureOpenAi/LmChatAzureOpenAi.node.js",
+      "dist/nodes_zh/llms/LmGooglePalm/LmGooglePalm.node.js",
+      "dist/nodes_zh/llms/LmChatAwsBedrock/LmChatAwsBedrock.node.js",
+      "dist/nodes_zh/llms/LmChatGooglePalm/LmChatGooglePalm.node.js",
+      "dist/nodes_zh/llms/LmChatGoogleGemini/LmChatGoogleGemini.node.js",
+      "dist/nodes_zh/llms/LmChatMistralCloud/LmChatMistralCloud.node.js",
+      "dist/nodes_zh/llms/LMChatOllama/LmChatOllama.node.js",
+      "dist/nodes_zh/llms/LMChatOpenAi/LmChatOpenAi.node.js",
+      "dist/nodes_zh/llms/LMOpenAi/LmOpenAi.node.js",
+      "dist/nodes_zh/llms/LMCohere/LmCohere.node.js",
+      "dist/nodes_zh/llms/LMOllama/LmOllama.node.js",
+      "dist/nodes_zh/llms/LMOpenHuggingFaceInference/LmOpenHuggingFaceInference.node.js",
+      "dist/nodes_zh/memory/MemoryBufferWindow/MemoryBufferWindow.node.js",
+      "dist/nodes_zh/memory/MemoryMotorhead/MemoryMotorhead.node.js",
+      "dist/nodes_zh/memory/MemoryRedisChat/MemoryRedisChat.node.js",
+      "dist/nodes_zh/memory/MemoryManager/MemoryManager.node.js",
+      "dist/nodes_zh/memory/MemoryChatRetriever/MemoryChatRetriever.node.js",
+      "dist/nodes_zh/memory/MemoryXata/MemoryXata.node.js",
+      "dist/nodes_zh/memory/MemoryZep/MemoryZep.node.js",
+      "dist/nodes_zh/output_parser/OutputParserAutofixing/OutputParserAutofixing.node.js",
+      "dist/nodes_zh/output_parser/OutputParserItemList/OutputParserItemList.node.js",
+      "dist/nodes_zh/output_parser/OutputParserStructured/OutputParserStructured.node.js",
+      "dist/nodes_zh/retrievers/RetrieverContextualCompression/RetrieverContextualCompression.node.js",
+      "dist/nodes_zh/retrievers/RetrieverVectorStore/RetrieverVectorStore.node.js",
+      "dist/nodes_zh/retrievers/RetrieverMultiQuery/RetrieverMultiQuery.node.js",
+      "dist/nodes_zh/retrievers/RetrieverWorkflow/RetrieverWorkflow.node.js",
+      "dist/nodes_zh/text_splitters/TextSplitterCharacterTextSplitter/TextSplitterCharacterTextSplitter.node.js",
+      "dist/nodes_zh/text_splitters/TextSplitterRecursiveCharacterTextSplitter/TextSplitterRecursiveCharacterTextSplitter.node.js",
+      "dist/nodes_zh/text_splitters/TextSplitterTokenSplitter/TextSplitterTokenSplitter.node.js",
+      "dist/nodes_zh/tools/ToolCalculator/ToolCalculator.node.js",
+      "dist/nodes_zh/tools/ToolCode/ToolCode.node.js",
+      "dist/nodes_zh/tools/ToolSerpApi/ToolSerpApi.node.js",
+      "dist/nodes_zh/tools/ToolWikipedia/ToolWikipedia.node.js",
+      "dist/nodes_zh/tools/ToolWolframAlpha/ToolWolframAlpha.node.js",
+      "dist/nodes_zh/tools/ToolWorkflow/ToolWorkflow.node.js",
+      "dist/nodes_zh/trigger/ManualChatTrigger/ManualChatTrigger.node.js",
+      "dist/nodes_zh/trigger/ChatTrigger/ChatTrigger.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreInMemory/VectorStoreInMemory.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreInMemoryInsert/VectorStoreInMemoryInsert.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreInMemoryLoad/VectorStoreInMemoryLoad.node.js",
+      "dist/nodes_zh/vector_store/VectorStorePinecone/VectorStorePinecone.node.js",
+      "dist/nodes_zh/vector_store/VectorStorePineconeInsert/VectorStorePineconeInsert.node.js",
+      "dist/nodes_zh/vector_store/VectorStorePineconeLoad/VectorStorePineconeLoad.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreQdrant/VectorStoreQdrant.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreSupabase/VectorStoreSupabase.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreSupabaseInsert/VectorStoreSupabaseInsert.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreSupabaseLoad/VectorStoreSupabaseLoad.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreZep/VectorStoreZep.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreZepInsert/VectorStoreZepInsert.node.js",
+      "dist/nodes_zh/vector_store/VectorStoreZepLoad/VectorStoreZepLoad.node.js"
     ]
   },
   "devDependencies": {
