--- a/packages/@n8n/nodes-langchain/tsconfig.json
+++ b/packages/@n8n/nodes-langchain/tsconfig.json
@@ -20,5 +20,6 @@
 		"skipLibCheck": true,
 		"outDir": "./dist/"
 	},
-	"include": ["credentials/**/*", "nodes/**/*", "utils/**/*.ts", "nodes/**/*.json"]
+	"include": ["credentials/**/*", "nodes_zh/**/*.ts",
+	"nodes_zh/**/*.json", "nodes/**/*", "utils/**/*.ts", "nodes/**/*.json"]
 }
