--- a/packages/editor-ui/package.json
+++ b/packages/editor-ui/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "n8n-editor-ui",
+  "name": "webn8n",
   "version": "1.26.0",
   "description": "Workflow Editor UI for n8n",
   "license": "SEE LICENSE IN LICENSE.md",
-  "homepage": "https://n8n.io",
   "author": {
     "name": "Jan Oberhauser",
     "email": "jan@n8n.io"
   },
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/n8n-io/n8n.git"
+  "bin": {
+    "webn8n": "./bin/webcpy"
   },
+  "main": "index.js",
   "scripts": {
     "clean": "rimraf dist .turbo",
     "build": "cross-env VUE_APP_PUBLIC_PATH=\"/{{BASE_PATH}}/\" NODE_OPTIONS=\"--max-old-space-size=8192\" vite build",
